Make a config builder for the callback server.